# lyprox

./: .dockerignore  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  README.rst  all-documents.html  apidocs-help.html  backup.sh  classIndex.html  clean.sh  core._version.html  core.defaults.html  core.html  core.settings.html  core.urls.html  core.views.html  core.wsgi.html  dashboard.forms.DashboardForm.html  dashboard.forms.DatasetModelChoiceIndexer.html  dashboard.forms.DatasetMultipleChoiceField.html  dashboard.forms.InstitutionModelChoiceIndexer.html  dashboard.forms.InstitutionMultipleChoiceField.html  dashboard.forms.ThreeWayToggle.html  dashboard.forms.ThreeWayToggleWidget.html  dashboard.forms.html  dashboard.html  dashboard.query.ModalityCombinor.html  dashboard.query.html  dashboard.tests.QueryTests.html  dashboard.tests.html  dashboard.urls.html  dashboard.views.DashboardView.html  dashboard.views.html  docker-compose.yaml  fullsearchindex.json  gunicorn.conf.py  (+271 more)
.chglog/: config.yml
.github/workflows/: cd.yml  codeql-analysis.yml  deploy.yml  docs.yml
accounts/: admin.py  forms.py  mixins.py  models.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_alter_institution_logo.py  0002_alter_user_institution.py  0002_populate_initial_database.py  0002_remove_institution_is_hidden.py
accounts/templates/accounts/: login.html  logout.html  signup.html  signup_request.html
core/: __init__.py  _version.py  asgi.py  context_processors.py  defaults.py  gunicorn.conf.py  loggers.py  middleware.py  settings.py  urls.py  views.py  wsgi.py
core/custom_bulma/: package-lock.json  package.json
core/custom_bulma/sass/: usz.scss
core/static/: usz.css
core/templates/: 403.html  404.html  500.html  base.html  footer.html  head.html  index.html  index.md  maintenance.html  navbar.html  versions.html
dashboard/: __init__.py  forms.py  new_query.py  query.py  tests.py  urls.py  views.py
dashboard/static/dashboard/: dashboard.css  dashboard.js  help.css
dashboard/templates/dashboard/: barplot.html  controls.html  help-media.html  help-tooltip.html  help.html  help.md  help_buttons.md  help_institutions.md  help_involvement.md  help_media.html  help_modalities.md  help_patient.html  help_patient.md  help_tooltip.html  help_tumor.md  involvement.html  layout.html  lnlrow.html  modalities.html  three-way-toggle.html  three_way_toggle_stats.html
dashboard/templates/widgets/: three_way_toggle.html  three_way_toggle_option.html
dataexplorer/: __init__.py  apps.py  forms.py  query.py  views.py
dataexplorer/templates/dataexplorer/: controls.html  involvement.html  layout.html
django_lymph_interface/: manage.py
django_lymph_interface/django_lymph_interface/: asgi.py  settings.py  urls.py  wsgi.py
docs/: accounts.rst  conf.py  core.rst  dashboard.rst  index.rst  logging.rst  modules.rst  patient_representation.rst  patients.rst  patients.templatetags.rst  usage.rst  user_management.rst
docs/_static/: model-graph.dot
docs/_static/css/: custom.css
docs/accounts/: forms.rst  models.rst  views.rst
docs/dashboard/: forms.rst  query.rst  views.rst
docs/patients/: filters.rst  forms.rst  ioports.rst  mixins.rst  models.rst  views.rst
initial/: datasets.json  institutions.json  riskmodels.json  users.json
lymph_interface/: asgi.py  loggers.py  manage.py  settings.py  urls.py  wsgi.py
lymph_interface/lymph_interface/: settings.py  urls.py
lymph_interface/patients/: admin.py  filters.py  forms.py  models.py  urls.py  utils.py  views.py
lymph_interface/patients/migrations/: 0001_initial.py  0002_auto_20210223_1233.py  0002_auto_20210301_2109.py  0002_auto_20210311_1258.py  0002_patient_neck_dissection.py  0002_tumor_position.py  (+12 more)
lymph_interface/settings/: defaults.py  development.py  production.py
lymph_interface/static/: base.css  index.css  style.css  usz.css
lymph_interface/templates/: 500.html  base.html  footer.html  head.html  index.html  index.md  navbar.html  test_bulma.html
lyprox/: __init__.py  __main__.py  context_processors.py  loggers.py  middleware.py  settings.py  urls.py  utils.py  views.py  wsgi.py
lyprox/accounts/: apps.py  forms.py  mixins.py  models.py  urls.py
lyprox/dataexplorer/: __init__.py  admin.py  apps.py  forms.py  loader.py  models.py  query.py  subsites.py  urls.py  utils.py  views.py
lyprox/patients/: apps.py  forms.py  ioports.py  mixins.py  models.py  test.csv  tests.py  urls.py  views.py
lyprox/riskpredictor/: __init__.py  admin.py  apps.py  forms.py  models.py  predict.py  urls.py  views.py
lyprox/static/: barplot.css  dashboard.css  navbar.js  publications.yaml  usz.css
lyprox/templates/: 403.html  404.html  500.html  barplot.html  base.html  description.md  errors.html  footer.html  head.html  head_content.html  index.html  index.md  maintenance.html  navbar.html  publication.html
lyprox/templatetags/: customtags.py
nginx/: Dockerfile  lyprox.conf
patients/: __init__.py  admin.py  fields.py  filters.py  forms.py  ioports.py  loggers.py  mixins.py  models.py  query.py  tests.py  urls.py  utils.py  validators.py  views.py
patients/management/: __init__.py
patients/migrations/: 0001_initial.py  0002_alter_tumor_subsite.py  0002_dataset_export_md5_dataset_upload_md5_and_more.py  0002_remove_patient_hash_value_alter_tumor_subsite.py  0003_add_V_sublevel.py  0004_alter_tumor_subsite.py  0005_csvtable.py  0005_dataset_remove_patient_institution_patient_dataset.py  0005_institutionpatienttable.py  0006_alter_patient_dataset.py  0006_csvtable_github_url_csvtable_zenodo_url.py  0007_dataset_repo_data_url_dataset_repo_provider_and_more.py  0008_alter_dataset_export_csv_alter_dataset_upload_csv.py
patients/templatetags/: mytags.py
risk/: apps.py  urls.py
riskpredictor/: apps.py  urls.py
static/: base.css
templates/: 404.html  head.html  index.html  navbar.html
tests/: conftest.py  factories.py  test_models.py  test_views.py
tests/dataexplorer/: conftest.py  test_forms.py  test_loader.py  test_query.py
(+186 files in other folders)
