[build-system]
requires = [
    "setuptools >= 61.0.0",
    "setuptools_scm >= 7.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "lyprox"
description = "Web app for exploring patterns and correlations in the lymph node level involvements of head & neck cancer patients."
authors = [
    {name = "Roman Ludwig", email = "roman.ludwig@usz.ch"}
]
readme = "README.md"
keywords = ["web app", "head and neck", "cancer", "radiation oncology", "lymph nodes", "metastases"]
license = { text = "MIT"}
dynamic = ["version"]
requires-python = "~=3.10"
dependencies = [
    "Django == 4.2.20",
    "django-phonenumber-field[phonenumbers] ~= 8.0",
    "django-sekizai ~= 4.1",
    "Markdown ~= 3.7",
    "fontawesomefree ~= 5.15",
    "gunicorn ~= 23.0",
    "dvc ~= 3.59",
    "PyGithub ~= 2.6",
    "dateparser ~= 1.2",
    "python-markdown-math ~= 0.8",
    "dotenv ~= 0.9",
    "lydata == 0.2.5",
    "lymph-model == 1.3.3",
    "lyscripts==1.0.0a7",
    "jinja2 ~= 3.1",
    "habanero==2.2.0",
]

[project.urls]
source = "https://github.com/rmnldwg/lyprox"
documentation = "https://rmnldwg.github.io/lyprox"

[project.optional-dependencies]
docs = [
    "pydoctor",
    "myst-parser",
]
test = [
    "pytest-django",
]
dev = [
    "django-extensions ~= 3.2",
]

[project.scripts]
"lyprox" = "lyprox.manage:main"

[tool.setuptools]
packages = ["lyprox"]

[tool.setuptools.dynamic]
version = {attr = "lyprox._version.version"}

[tool.setuptools_scm]
write_to = "lyprox/_version.py"
local_scheme = "no-local-version"

[tool.ruff.lint]
select = ["E", "F", "W", "B", "C", "R", "U", "D", "I", "S", "T", "A", "N"]
ignore = ["D204", "D205", "D213"]
exclude = ["*/migrations/*", "tests/*"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "lyprox.settings"
python_files = "test_*.py"

[tool.pydoctor]
project-name = "LyProX"
add-package = ["lyprox"]
intersphinx = [
    "https://lymph-model.readthedocs.io/stable/objects.inv",
    "https://lyscripts.readthedocs.io/latest/objects.inv",
    "https://lydata.readthedocs.io/latest/objects.inv",
    "https://docs.pydantic.dev/latest/objects.inv",
    "https://pandas.pydata.org/docs/objects.inv",
    "http://docs.djangoproject.com/en/4.2/_objects",
    "https://joblib.readthedocs.io/en/stable/objects.inv",
]
docformat = "google"
make-html = true
html-output = "./docs"
verbose = 1
privacy = [
    "HIDDEN:lyprox.middleware",
    "HIDDEN:lyprox.loggers",
]
